# mysql-cli

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/docker/: centos7.Dockerfile
.github/workflows/: build.yml
src/: format.rs  main.rs  sqlutil.rs  theme.rs
