[package]
name = "mysql-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
dialoguer = { version = "0.12.0", features = ["history"] }
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio", "chrono"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
